--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				
 				<a href="#" class="image avatar"><img src="images/me.jpg" alt="" /></a>
 				<h1><strong>I am Aravind</strong>, a Petrolhead <br />
-				pursuing my B.tech in Computer Science and Engineering .<br />
+				pursuing my Bachelor of Technology in Computer Science and Engineering .<br />
 				<!-- Crafted With <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 			</header>
 
