--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<header id="header">
 				
 				<a href="#" class="image avatar"><img src="images/me.jpg" alt="" /></a>
-				<h1><strong>I am Aravind</strong>, a Petrolhead <br />
-				pursuing my Bachelor of Technology in Computer Science and Engineering .<br />
+				<h1><strong>I am Aravind Sankar </strong>, a grad student <br />
+				pursuing my Masters in Computer Science  at University of Cincinnati .<br />
 				<!-- Crafted With <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 			</header>
 
@@ -77,17 +77,17 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										310 Surya Nagar Rd.<br />
-										Pattom, Trivandrum 695011<br />
-										Kerala, India
+										3233 Whitfield Avenue<br />
+										Cincinnati Ohio<br />
+										USA 45220
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										+91-940-079-6771
+										+1-513(807)4693
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">aravinds1996@gmail.com</a>
+										<a href="#">sasikuar@mail.uc.edu</a>
 									</li>	
 								</ul>	
 							</div>	
