--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<h2>Things that make me crazy  </h2>
 						<div class="row">
 							<ul class="feature-icons">
-										<li class="icon fa-code"> Coding mainly for Web Designing. </li>
+										<li class="icon fa-code"> Interested in Web Designing. </li>
 										<li class="icon fa-book">  Loves IoT Projects. </li>
 										<li class="icon fa-car"> I love Driving .</li>
 										<li class="icon fa-cubes">  Open Software Promoter.</li>
